--- a/index.ipynb
+++ b/index.ipynb
@@ -138,16 +138,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_latitude = coordinates[0]"
+    "ba_latitude = coordinates[0]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-58.3816"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ba_longitude = coordinates[1]"
+    "ba_longitude = coordinates[1]\n",
+    "ba_longitude"
    ]
   },
   {
